thrift_parser/ThriftParser.py
# Generated from antlr/Thrift.g4 by ANTLR 4.10.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ThriftParser ( Parser ):

    grammarFileName = "Thrift.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'include'", "'namespace'", "'*'", "'cpp_namespace'", 
                     "'php_namespace'", "'cpp_include'", "'const'", "'='", 
                     "'typedef'", "'enum'", "'{'", "'}'", "'senum'", "'struct'", 
                     "'union'", "'exception'", "'service'", "'extends'", 
                     "':'", "'required'", "'optional'", "'('", "')'", "'oneway'", 
                     "'async'", "'void'", "'throws'", "'map'", "'<'", "'>'", 
                     "'set'", "'list'", "'cpp_type'", "'['", "']'", "';'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'bool'", "'byte'", 
                     "'i16'", "'i32'", "'i64'", "'double'", "'string'", 
                     "'binary'", "<INVALID>", "<INVALID>", "','" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "INTEGER", "HEX_INTEGER", "DOUBLE", "TYPE_BOOL", 
                      "TYPE_BYTE", "TYPE_I16", "TYPE_I32", "TYPE_I64", "TYPE_DOUBLE", 
                      "TYPE_STRING", "TYPE_BINARY", "LITERAL_VALUE", "IDENTIFIER", 
                      "COMMA", "WS", "SL_COMMENT", "ML_COMMENT" ]

    RULE_document = 0
    RULE_header = 1
    RULE_include_ = 2
    RULE_namespace_ = 3
    RULE_cpp_include = 4
    RULE_definition = 5
    RULE_const_rule = 6
    RULE_typedef_ = 7
    RULE_enum_rule = 8
    RULE_enum_field = 9
    RULE_senum = 10
    RULE_struct_ = 11
    RULE_union_ = 12
    RULE_exception = 13
    RULE_service = 14
    RULE_field = 15
    RULE_field_id = 16
    RULE_field_req = 17
    RULE_function_ = 18
    RULE_oneway = 19
    RULE_function_type = 20
    RULE_throws_list = 21
    RULE_type_annotations = 22
    RULE_type_annotation = 23
    RULE_annotation_value = 24
    RULE_field_type = 25
    RULE_base_type = 26
    RULE_container_type = 27
    RULE_map_type = 28
    RULE_set_type = 29
    RULE_list_type = 30
    RULE_cpp_type = 31
    RULE_const_value = 32
    RULE_integer = 33
    RULE_const_list = 34
    RULE_const_map_entry = 35
    RULE_const_map = 36
    RULE_list_separator = 37
    RULE_real_base_type = 38

    ruleNames =  [ "document", "header", "include_", "namespace_", "cpp_include", 
                   "definition", "const_rule", "typedef_", "enum_rule", 
                   "enum_field", "senum", "struct_", "union_", "exception", 
                   "service", "field", "field_id", "field_req", "function_", 
                   "oneway", "function_type", "throws_list", "type_annotations", 
                   "type_annotation", "annotation_value", "field_type", 
                   "base_type", "container_type", "map_type", "set_type", 
                   "list_type", "cpp_type", "const_value", "integer", "const_list", 
                   "const_map_entry", "const_map", "list_separator", "real_base_type" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    INTEGER=37
    HEX_INTEGER=38
    DOUBLE=39
    TYPE_BOOL=40
    TYPE_BYTE=41
    TYPE_I16=42
    TYPE_I32=43
    TYPE_I64=44
    TYPE_DOUBLE=45
    TYPE_STRING=46
    TYPE_BINARY=47
    LITERAL_VALUE=48
    IDENTIFIER=49
    COMMA=50
    WS=51
    SL_COMMENT=52
    ML_COMMENT=53

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.10.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class DocumentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ThriftParser.EOF, 0)

        def header(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ThriftParser.HeaderContext)
            else:
                return self.getTypedRuleContext(ThriftParser.HeaderContext,i)


        def definition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ThriftParser.DefinitionContext)
            else:
                return self.getTypedRuleContext(ThriftParser.DefinitionContext,i)


        def getRuleIndex(self):
            return ThriftParser.RULE_document

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDocument" ):
                listener.enterDocument(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDocument" ):
                listener.exitDocument(self)




    def document(self):

        localctx = ThriftParser.DocumentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_document)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ThriftParser.T__0) | (1 << ThriftParser.T__1) | (1 << ThriftParser.T__3) | (1 << ThriftParser.T__4) | (1 << ThriftParser.T__5))) != 0):
                self.state = 78
                self.header()
                self.state = 83
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ThriftParser.T__6) | (1 << ThriftParser.T__8) | (1 << ThriftParser.T__9) | (1 << ThriftParser.T__12) | (1 << ThriftParser.T__13) | (1 << ThriftParser.T__14) | (1 << ThriftParser.T__15) | (1 << ThriftParser.T__16))) != 0):
                self.state = 84
                self.definition()
                self.state = 89
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 90
            self.match(ThriftParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HeaderContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def include_(self):
            return self.getTypedRuleContext(ThriftParser.Include_Context,0)


        def namespace_(self):
            return self.getTypedRuleContext(ThriftParser.Namespace_Context,0)


        def cpp_include(self):
            return self.getTypedRuleContext(ThriftParser.Cpp_includeContext,0)


        def getRuleIndex(self):
            return ThriftParser.RULE_header

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHeader" ):
                listener.enterHeader(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHeader" ):
                listener.exitHeader(self)




    def header(self):

        localctx = ThriftParser.HeaderContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_header)
        try:
            self.state = 95
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ThriftParser.T__0]:
                self.enterOuterAlt(localctx, 1)
                self.state = 92
                self.include_()
                pass
            elif token in [ThriftParser.T__1, ThriftParser.T__3, ThriftParser.T__4]:
                self.enterOuterAlt(localctx, 2)
                self.state = 93
                self.namespace_()
                pass
            elif token in [ThriftParser.T__5]:
                self.enterOuterAlt(localctx, 3)
                self.state = 94
                self.cpp_include()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Include_Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LITERAL_VALUE(self):
            return self.getToken(ThriftParser.LITERAL_VALUE, 0)

        def getRuleIndex(self):
            return ThriftParser.RULE_include_

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInclude_" ):
                listener.enterInclude_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInclude_" ):
                listener.exitInclude_(self)




    def include_(self):

        localctx = ThriftParser.Include_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_include_)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(ThriftParser.T__0)
            self.state = 98
            self.match(ThriftParser.LITERAL_VALUE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Namespace_Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(ThriftParser.IDENTIFIER)
            else:
                return self.getToken(ThriftParser.IDENTIFIER, i)

        def LITERAL_VALUE(self):
            return self.getToken(ThriftParser.LITERAL_VALUE, 0)

        def getRuleIndex(self):
            return ThriftParser.RULE_namespace_

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNamespace_" ):
                listener.enterNamespace_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNamespace_" ):
                listener.exitNamespace_(self)




    def namespace_(self):

        localctx = ThriftParser.Namespace_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_namespace_)
        self._la = 0 # Token type
        try:
            self.state = 110
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 100
                self.match(ThriftParser.T__1)
                self.state = 101
                self.match(ThriftParser.T__2)
                self.state = 102
                _la = self._input.LA(1)
                if not(_la==ThriftParser.LITERAL_VALUE or _la==ThriftParser.IDENTIFIER):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 103
                self.match(ThriftParser.T__1)
                self.state = 104
                self.match(ThriftParser.IDENTIFIER)
                self.state = 105
                _la = self._input.LA(1)
                if not(_la==ThriftParser.LITERAL_VALUE or _la==ThriftParser.IDENTIFIER):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 106
                self.match(ThriftParser.T__3)
                self.state = 107
                self.match(ThriftParser.IDENTIFIER)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 108
                self.match(ThriftParser.T__4)
                self.state = 109
                self.match(ThriftParser.IDENTIFIER)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Cpp_includeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LITERAL_VALUE(self):
            return self.getToken(ThriftParser.LITERAL_VALUE, 0)

        def getRuleIndex(self):
            return ThriftParser.RULE_cpp_include

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCpp_include" ):
                listener.enterCpp_include(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCpp_include" ):
                listener.exitCpp_include(self)




    def cpp_include(self):

        localctx = ThriftParser.Cpp_includeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_cpp_include)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(ThriftParser.T__5)
            self.state = 113
            self.match(ThriftParser.LITERAL_VALUE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def const_rule(self):
            return self.getTypedRuleContext(ThriftParser.Const_ruleContext,0)


        def typedef_(self):
            return self.getTypedRuleContext(ThriftParser.Typedef_Context,0)


        def enum_rule(self):
            return self.getTypedRuleContext(ThriftParser.Enum_ruleContext,0)


        def senum(self):
            return self.getTypedRuleContext(ThriftParser.SenumContext,0)


        def struct_(self):
            return self.getTypedRuleContext(ThriftParser.Struct_Context,0)


        def union_(self):
            return self.getTypedRuleContext(ThriftParser.Union_Context,0)


        def exception(self):
            return self.getTypedRuleContext(ThriftParser.ExceptionContext,0)


        def service(self):
            return self.getTypedRuleContext(ThriftParser.ServiceContext,0)


        def getRuleIndex(self):
            return ThriftParser.RULE_definition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefinition" ):
                listener.enterDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefinition" ):
                listener.exitDefinition(self)




    def definition(self):

        localctx = ThriftParser.DefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_definition)
        try:
            self.state = 123
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ThriftParser.T__6]:
                self.enterOuterAlt(localctx, 1)
                self.state = 115
                self.const_rule()
                pass
            elif token in [ThriftParser.T__8]:
                self.enterOuterAlt(localctx, 2)
                self.state = 116
                self.typedef_()
                pass
            elif token in [ThriftParser.T__9]:
                self.enterOuterAlt(localctx, 3)
                self.state = 117
                self.enum_rule()
                pass
            elif token in [ThriftParser.T__12]:
                self.enterOuterAlt(localctx, 4)
                self.state = 118
                self.senum()
                pass
            elif token in [ThriftParser.T__13]:
                self.enterOuterAlt(localctx, 5)
                self.state = 119
                self.struct_()
                pass
            elif token in [ThriftParser.T__14]:
                self.enterOuterAlt(localctx, 6)
                self.state = 120
                self.union_()
                pass
            elif token in [ThriftParser.T__15]:
                self.enterOuterAlt(localctx, 7)
                self.state = 121
                self.exception()
                pass
            elif token in [ThriftParser.T__16]:
                self.enterOuterAlt(localctx, 8)
                self.state = 122
                self.service()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Const_ruleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def field_type(self):
            return self.getTypedRuleContext(ThriftParser.Field_typeContext,0)


        def IDENTIFIER(self):
            return self.getToken(ThriftParser.IDENTIFIER, 0)

        def const_value(self):
            return self.getTypedRuleContext(ThriftParser.Const_valueContext,0)


        def list_separator(self):
            return self.getTypedRuleContext(ThriftParser.List_separatorContext,0)


        def getRuleIndex(self):
            return ThriftParser.RULE_const_rule

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConst_rule" ):
                listener.enterConst_rule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConst_rule" ):
                listener.exitConst_rule(self)




    def const_rule(self):

        localctx = ThriftParser.Const_ruleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_const_rule)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.match(ThriftParser.T__6)
            self.state = 126
            self.field_type()
            self.state = 127
            self.match(ThriftParser.IDENTIFIER)
            self.state = 130
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==ThriftParser.T__7:
                self.state = 128
                self.match(ThriftParser.T__7)
                self.state = 129
                self.const_value()


            self.state = 133
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==ThriftParser.T__35 or _la==ThriftParser.COMMA:
                self.state = 132
                self.list_separator()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Typedef_Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def field_type(self):
            return self.getTypedRuleContext(ThriftParser.Field_typeContext,0)


        def IDENTIFIER(self):
            return self.getToken(ThriftParser.IDENTIFIER, 0)

        def type_annotations(self):
            return self.getTypedRuleContext(ThriftParser.Type_annotationsContext,0)


        def getRuleIndex(self):
            return ThriftParser.RULE_typedef_

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypedef_" ):
                listener.enterTypedef_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypedef_" ):
                listener.exitTypedef_(self)




    def typedef_(self):

        localctx = ThriftParser.Typedef_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_typedef_)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.match(ThriftParser.T__8)
            self.state = 136
            self.field_type()
            self.state = 137
            self.match(ThriftParser.IDENTIFIER)
            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==ThriftParser.T__21:
                self.state = 138
                self.type_annotations()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Enum_ruleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(ThriftParser.IDENTIFIER, 0)

        def enum_field(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ThriftParser.Enum_fieldContext)
            else:
                return self.getTypedRuleContext(ThriftParser.Enum_fieldContext,i)


        def type_annotations(self):
            return self.getTypedRuleContext(ThriftParser.Type_annotationsContext,0)


        def getRuleIndex(self):
            return ThriftParser.RULE_enum_rule

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnum_rule" ):
                listener.enterEnum_rule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEnum_rule" ):
                listener.exitEnum_rule(self)




    def enum_rule(self):

        localctx = ThriftParser.Enum_ruleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_enum_rule)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.match(ThriftParser.T__9)
            self.state = 142
            self.match(ThriftParser.IDENTIFIER)
            self.state = 143
            self.match(ThriftParser.T__10)
            self.state = 147
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ThriftParser.IDENTIFIER:
                self.state = 144
                self.enum_field()
                self.state = 149
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 150
            self.match(ThriftParser.T__11)
            self.state = 152
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==ThriftParser.T__21:
                self.state = 151
                self.type_annotations()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Enum_fieldContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(ThriftParser.IDENTIFIER, 0)

        def integer(self):
            return self.getTypedRuleContext(ThriftParser.IntegerContext,0)


        def type_annotations(self):
            return self.getTypedRuleContext(ThriftParser.Type_annotationsContext,0)


        def list_separator(self):
            return self.getTypedRuleContext(ThriftParser.List_separatorContext,0)


        def getRuleIndex(self):
            return ThriftParser.RULE_enum_field

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnum_field" ):
                listener.enterEnum_field(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEnum_field" ):
                listener.exitEnum_field(self)




    def enum_field(self):

        localctx = ThriftParser.Enum_fieldContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_enum_field)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self.match(ThriftParser.IDENTIFIER)
            self.state = 157
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==ThriftParser.T__7:
                self.state = 155
                self.match(ThriftParser.T__7)
                self.state = 156
                self.integer()


            self.state = 160
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==ThriftParser.T__21:
                self.state = 159
                self.type_annotations()


            self.state = 163
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==ThriftParser.T__35 or _la==ThriftParser.COMMA:
                self.state = 162
                self.list_separator()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SenumContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(ThriftParser.IDENTIFIER, 0)

        def LITERAL_VALUE(self, i:int=None):
            if i is None:
                return self.getTokens(ThriftParser.LITERAL_VALUE)
            else:
                return self.getToken(ThriftParser.LITERAL_VALUE, i)

        def type_annotations(self):
            return self.getTypedRuleContext(ThriftParser.Type_annotationsContext,0)


        def list_separator(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ThriftParser.List_separatorContext)
            else:
                return self.getTypedRuleContext(ThriftParser.List_separatorContext,i)


        def getRuleIndex(self):
            return ThriftParser.RULE_senum

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSenum" ):
                listener.enterSenum(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSenum" ):
                listener.exitSenum(self)




    def senum(self):

        localctx = ThriftParser.SenumContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_senum)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 165
            self.match(ThriftParser.T__12)
            self.state = 166
            self.match(ThriftParser.IDENTIFIER)
            self.state = 167
            self.match(ThriftParser.T__10)
            self.state = 174
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ThriftParser.LITERAL_VALUE:
                self.state = 168
                self.match(ThriftParser.LITERAL_VALUE)
                self.state = 170
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==ThriftParser.T__35 or _la==ThriftParser.COMMA:
                    self.state = 169
                    self.list_separator()


                self.state = 176
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 177
            self.match(ThriftParser.T__11)
            self.state = 179
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==ThriftParser.T__21:
                self.state = 178
                self.type_annotations()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Struct_Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(ThriftParser.IDENTIFIER, 0)

        def field(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ThriftParser.FieldContext)
            else:
                return self.getTypedRuleContext(ThriftParser.FieldContext,i)


        def type_annotations(self):
            return self.getTypedRuleContext(ThriftParser.Type_annotationsContext,0)


        def getRuleIndex(self):
            return ThriftParser.RULE_struct_

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStruct_" ):
                listener.enterStruct_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStruct_" ):
                listener.exitStruct_(self)




    def struct_(self):
